--- a/src/App.css
+++ b/src/App.css
@@ -11,21 +11,9 @@
     grid-gap: 10px;
 }
 
-.header {
-    grid-area: header;
-    background-color: aqua;
-}
 
-.header img {
-    width: 20px;
-}
-
-.nav {
-    grid-area: nav;
-    background-color: aquamarine;
-}
-
-.content {
+.app-wrapper-content {
     grid-area: content;
     background-color: coral;
 }
+
